working/applications/exhibition-backend/routes/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: exhibition-be
  # namespace and spec.parentRefs are platform-injected and overwritten
spec:
  hostnames:
    - api.exhibition.scg.sh
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /v1/
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              value: /
      backendRefs:
        - name: be
          port: 80
